--- a/biblio.bib
+++ b/biblio.bib
@@ -14,26 +14,40 @@
 	year = {},
 	month = {},
 }
+@book {AbrahamMarsdenRatiu1988,
+	author = {Abraham, Ralph and Marsden, Jerrold E. and Ratiu, Tudor},
+	title = {Manifolds, Tensor Analysis, and Applications},
+	series = {Applied Mathematical Sciences},
+	number = {75},
+	edition = {second},
+	publisher = {Springer},
+	address = {New York},
+	year = {1988},
+	month = {},
+}
 @book {Adams1975,
 	author = {Adams, Robert A.},
 	title = {Sobolev Spaces},
-	publisher = {Academic Press: Orlando, Florida},
+	publisher = {Academic Press},
+	address = {Orlando, Florida},
 	year = {1975},
 	month = {},
 }
 @book {Anderson2011,
 	author = {Anderson, {Jr}., John D.},
 	title = {Fundamentals of Aerodynamics},
-	publisher = {McGraw-Hill: New York},
+	publisher = {McGraw-Hill},
+	address = {New York},
 	year = {2011},
 	month = {},
 	edition = {fifth},
 }
-@book {Batchelor2000,
+@book {Batchelor1987,
 	author = {Batchelor, George K.},
-	title = {An {I}ntroduction to {F}luid {D}ynamics},
+	title = {An Introduction to Fluid Dynamics},
 	publisher = {Cambridge University Press},
-	year = {2000},
+	address = {Cambridge},
+	year = {1987},
 	month = {},
 }
 @article {Berker1951,
@@ -49,7 +63,8 @@
 @book {ChoquetBruhatDewittMoretteDillardBleick,
 	author = {Choquet-Bruhat, Yvonne and DeWitt-Morette, C\'ecile and Dillard-Bleick, Margaret},
 	title = {Analysis, Manifolds and Physics},
-	publisher = {Elsevier: New York},
+	publisher = {Elsevier},
+	address = {New York},
 	year = {1982},
 	month = {},
 	edition = {revised},
@@ -57,7 +72,8 @@
 @book {ChorinMarsden1990,
 	author = {Chorin, Alexandre J. and Marsden, Jerrold E.},
 	title = {A Mathematical Introduction to Fluid Mechanics},
-	publisher = {Springer-Verlag: Berlin},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
 	year = {1990},
 	month = {},
 	edition = {second},
@@ -66,7 +82,8 @@
 @book {Chung1988,
 	author = {Chung, T. J.},
 	title = {Continuum Mechanics},
-	publisher = {Prentice Hall: Englewood Cliffs, New Jersey},
+	publisher = {Prentice Hall},
+	address = {Englewood Cliffs, New Jersey},
 	year = {1988},
 	month = {},
 }
@@ -93,7 +110,8 @@
 @book {CourantHilbert1953,
 	author = {Courant, Richard and Hilbert, David},
 	title = {Methods of Mathematical Physics},
-	publisher = {Interscience: New York},
+	publisher = {Interscience},
+	address = {New York},
 	year = {1953},
 	month = {},
 	volume = {I},
@@ -102,7 +120,8 @@
 @book {CourantHilbert1962,
 	author = {Courant, Richard and Hilbert, David},
 	title = {Methods of Mathematical Physics},
-	publisher = {Interscience: New York},
+	publisher = {Interscience},
+	address = {New York},
 	year = {1962},
 	month = {},
 	volume = {II},
@@ -111,7 +130,8 @@
 @book {DeRham1955,
 	author = {{d}e {R}ham, Georges},
 	title = {Vari\'et\'es Diff\'erentiables},
-	publisher = {Hermann: Paris},
+	publisher = {Hermann},
+	address = {Paris},
 	year = {1955},
 	month = {},
 }
@@ -127,35 +147,50 @@
 @book {Erdelyi1956,
 	author = {Erd\'elyi, Arthur},
 	title = {Asymptotic Expansions},
-	publisher = {Dover Publications: New York},
+	publisher = {Dover Publications},
+	address = {New York},
 	year = {1956},
 	month = {},
 }
 @book {EringenMaugin1990a,
 	author = {Eringen, A. Cemal and Maugin, G\'erard A.},
 	title = {Electrodynamics of Continua I: Foundations and Solid Media},
-	publisher = {Springer-Verlag: New York},
+	publisher = {Springer-Verlag},
+	address = {New York},
 	year = {1990},
 	month = {},
 }
 @book {EringenMaugin1990b,
 	author = {Eringen, A. Cemal and Maugin, G\'erard A.},
 	title = {Electrodynamics of Continua II: Fluids and Complex Media},
-	publisher = {Springer-Verlag: New York},
+	publisher = {Springer-Verlag},
+	address = {New York},
 	year = {1990},
 	month = {},
+}
+@book {Ferrers1871,
+	editor = {Ferrers, Norman M.},
+	title = {Mathematical Papers of the Late George Green},
+	publisher = {MacMillan and Company},
+	address = {London},
+	series = {},
+	year = {1871},
+	month = {},
+	note = {Reprint 1970, Chelsea Publications, Bronx, New York}
 }
 @book {Friedman1964,
 	author = {Friedman, Avner},
 	title = {Partial Differential Equations of Parabolic Type},
-	publisher = {Prentice Hall: Englewood Cliffs, New Jersey},
+	publisher = {Prentice Hall},
+	address = {Englewood Cliffs, New Jersey},
 	year = {1964},
 	month = {},
 }
 @book {Fulks1978,
 	author = {Fulks, Watson B.},
 	title = {Advanced Calculus},
-	publisher = {Wiley: New York},
+	publisher = {Wiley},
+	address = {New York},
 	year = {1978},
 	edition = {third},
 	month = {},
@@ -165,7 +200,8 @@
 	title = {An Introduction to the Mathematical Theory of the {N}avier-{S}tokes Equations. Volume I. Linearized Steady Problems},
 	series = {Springer Tracts in Natural Philosophy},
 	volume = {38},
-	publisher = {Springer-Verlag: New York, Berlin, Heidelberg},
+	publisher = {Springer-Verlag},
+	address = {New York},
 	year = {1994},
 	month = {},
 }
@@ -186,10 +222,31 @@
 	year = {1967},
 	month = {},
 }
+@book {GilbargTrudinger1983,
+	author = {Gilbarg, David and Trudinger, Neil S.},
+	title = {Elliptic Partial Differential Equations of Second Order},
+	series = {Grundlehren der mathematischen {W}issenschaften},
+	number = {224},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	edition = {second},
+	year = {1983},
+	month = {},
+}
+@book {GoffmanPedrick1983,
+	author = {Goffman, Casper and Pedrick, George},
+	title = {First Course in Functional Analysis},
+	publisher = {Chelsea Publishing Company},
+	address = {New York},
+	edition = {second},
+	year = {1983},
+	month = {},
+}
 @book {GradshteynRyzhik1980,
 	author = {Gradshteyn, Izrail S. and Ryzhik, Iosif M.},
 	title = {Table of Integrals, Series, and Products},
-	publisher = {Academic Press: New York},
+	publisher = {Academic Press},
+	address = {New York},
 	edition = {fourth},
 	year = {1980},
 	month = {},
@@ -197,7 +254,8 @@
 @book {GuentherLee1988,
 	author = {Guenther, Ronald B. and Lee, John W.},
 	title = {Partial {D}ifferential {E}quations of {M}athematical {P}hysics and {I}ntegral {E}quations},
-	publisher = {Prentice Hall: Englewood Cliffs, New Jersey},
+	publisher = {Prentice Hall},
+	address = {Englewood Cliffs, New Jersey},
 	year = {1988},
 	month = {},
 }
@@ -223,7 +281,8 @@
 @book {Hellwig1960,
 	author = {Hellwig, G\"unter},
 	title = {Partielle Differentialgleichungen},
-	publisher = {Teubner: Stuttgart},
+	publisher = {Teubner},
+	address = {Stuttgart},
 	year = {1960},
 	month = {},
 	note = {English translation 1964, {\it Partial Differential Equations: an Introduction}, Blaisdell}
@@ -237,12 +296,30 @@
 	number = {},
 	pages = {25--55},
 }
+@book {Hunt1965,
+	author = {Hunt, J. N.},
+	title = {Incompressible Fluid Dynamics},
+	publisher = {American Elsevier},
+	address = {New York},
+	year = {1965},
+	month = {},
+}
 @book {Hurt1965,
 	author = {Hurt, Jr., Harry H.},
 	title = {Aerodynamics for Naval Aviators (NAVWEPS 00-80T-80)},
 	publisher = {Aviation Supplies and Academics},
 	series = {ASA FAA Handbook Series},
 	year = {1965},
+	month = {},
+}
+@book {HutterVenUrsescu2010,
+	author = {Hutter, Kolumban and {v}an den {V}en, Alfons A. F. and Urescu, Ana},
+	title = {Electromagnetic Field Matter Interactions in Thermoelastic Solids and Viscous Fluids},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
+	series = {Lecture Notes in Physics},
+	number = {710},
+	year = {2010},
 	month = {},
 }
 @article {IlinKalashnikovOleink1962,
@@ -254,6 +331,26 @@
 	number = {3},
 	pages = {3--146},
 	note = {English translation in {\it Russian Mathematical Surveys}, vol. 17, no. 3, 1962},
+}
+@book {John1955,
+	author = {John, Fritz},
+	title = {Plane Waves and Spherical Means Applied to Partial Differential Equations},
+	publisher = {Interscience Publishers},
+	address = {New York},
+	series = {},
+	year = {1955},
+	month = {},
+}
+@book {John1982,
+	author = {John, Fritz},
+	title = {Partial Differential Equations},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	series = {Applied Mathematical Sciences},
+	number = {1},
+	edition = {fourth},
+	year = {1982},
+	month = {},
 }
 @article {Joseph2006,
 	author = {Joseph, Daniel D.},
@@ -279,52 +376,60 @@
 	publisher = {Springer-Verlag},
 	year = {1929},
 	month = {},
-	note = {Reprint 1953, Dover Publications: New York}
+	note = {Reprint 1953, Dover Publications, New York}
 }
 @book {KimKarrila2005,
 	author = {Kim, Sangtae and Karrila, Seppo J.},
 	title = {Microhydrodynamics: Principles and Selected Applications},
-	publisher = {Dover Publications: New York},
+	publisher = {Dover Publications},
+	address = {New York},
 	year = {2005},
 	month = {},
-	note = {Reprint of 1991 edition, Butterworth-Heinemann: Boston and London},
+	note = {Reprint of 1991 edition, Butterworth-Heinemann, Boston and London},
 }
 @book {KiralEringen1990,
 	author = {Kiral, Ehran and Eringen, A. Cemal},
 	title = {Constitutive Equations of Nonlinear Electromagnetic-Elastic Crystals},
-	publisher = {Springer-Verlag: New York},
+	publisher = {Springer-Verlag},
+	address = {New York},
 	year = {1990},
 	month = {},
 }
 @book {Ladyzhenskaya1963,
 	author = {Ladyzhenskaya, Olga A.},
 	title = {The Mathematical Theory of Viscous Incompressible Flow},
-	publisher = {Gordon and Breach: New York},
+	publisher = {Gordon and Breach},
+	address = {New York},
 	year = {1963},
 }
 @book {Lamb1895,
 	author = {Lamb, Horace},
 	title = {Hydrodynamics},
 	publisher = {Cambridge University Press},
+	address = {},
 	year = {1895},
 }
 @book {Liu2002,
 	author = {Liu, I-{S}hih},
 	title = {Continuum Mechanics},
-	publisher = {Springer-Verlag: Heidelberg New York},
+	publisher = {Springer-Verlag},
+	address = {New York},
 	year = {2002},
 }
 @book {Love1927,
 	author = {Love, Augustus E. H.},
 	title = {A Treatise on the Mathematical Theory of Elasticity},
 	publisher = {Cambridge University Press},
+	address = {},
 	year = {1927},
-	note = {Reprint 1944, Dover Publications: New York},
+	note = {Reprint 1944, Dover Publications, New York},
 }
 @book {MagnusOberhettingerSoni1966,
 	author = {Magnus, Wilhelm and Oberhettinger, Fritz and Soni, Raj P.},
 	title = {Formulas and Theorems for the Special Functions of Mathematical Physics},
-	publisher = {Springer-Verlag: New York},
+	series = {Die {G}rundlehren der mathematischen},
+	publisher = {Springer-Verlag},
+	address = {New York},
 	edition = {third},
 	year = {1966},
 }
@@ -332,32 +437,44 @@
 	author = {Maugin, G\'erard A.},
 	title = {Continuum Mechanics Through the Twentieth Century},
 	series = {Solid Mechanics and Its Applications 196},
-	publisher = {Springer: Dordrecht Heidelberg New York London},
+	publisher = {Springer},
+	address = {Dordrecht Heidelberg New York London},
 	year = {2013},
 }
 @book {Meyer1982,
 	author = {Meyer, Richard E.},
 	title = {Introduction to Mathematical Fluid Dynamics},
-	publisher = {Dover Publications: New York},
+	publisher = {Dover Publications},
+	address = {New York},
 	year = {1982},
 }
 @book {Mikhlin1965,
 	author = {Mikhlin, Solomon G.},
 	title = {Multidimensional Singular Integrals and Integral Equations},
-	publisher = {Pergamon Press: Oxford},
+	publisher = {Pergamon Press},
+	address = {Oxford},
 	year = {1965},
+}
+@book {MikhlinProssdorf1986,
+	author = {Mikhlin, Solomon G. and Pr\"ossdorf, Siegfried},
+	title = {Singular Integral Operators},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1986},
 }
 @book {MilneThomson1973,
 	author = {Milne-Thomson, Louis M.},
 	title = {Theoretical Aerodynamics},
-	publisher = {Dover Publications: New York},
+	publisher = {Dover Publications},
+	address = {New York},
 	edition = {fourth},
 	year = {1973},
 }
 @book {MilneThomson1996,
 	author = {Milne-Thomson, Louis M.},
 	title = {Theoretical Hydrodynamics},
-	publisher = {Dover Publications: New York},
+	publisher = {Dover Publications},
+	address = {New York},
 	edition = {fifth},
 	year = {1996},
 }
@@ -381,14 +498,16 @@
 	author = {M{\"u}ller, Claus},
 	title = {Grundprobleme der mathematischen {T}heorie elektromagnetischer {S}chwingungen},
 	series = {Die {G}rundlehren der mathematischen {W}issenschaften in {E}inzeldarstellungen 88},
-	publisher = {Springer-Verlag: Berlin},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
 	year = {1957},
-	note = {English translation 1969, {\it Foundations of the Mathematical Theory of Electromagnetic Waves}, Springer-Verlag: Berlin},
+	note = {English translation 1969, {\it Foundations of the Mathematical Theory of Electromagnetic Waves}, Springer-Verlag, Berlin},
 }
 @book {Muller1985,
 	author = {M{\"u}ller, Ingo},
 	title = {Thermodynamics},
-	publisher = {Pitman: London},
+	publisher = {Pitman},
+	address = {London},
 	year = {1985},
 }
 %% https://archive.org/details/s3id13207870/page/244/mode/2up?q=navier
@@ -404,7 +523,8 @@
 @book {NickersonSpencerSteenrod1959,
 	author = {Nickerson, Helen K. and Spencer, Donald C. and Steenrod, Norman E.},
 	title = {Advanced Calculus},
-	publisher = {D. Van Nostrand Company: Princeton, New Jersey},
+	publisher = {D. Van Nostrand Company},
+	address = {Princeton, New Jersey},
 	year = {1959},
 }
 @misc {NIST:DLMF,
@@ -435,7 +555,8 @@
 	booktitle = {The Axiomatic Method with Special Reference to Geometry and Physics},
 	series = {},
 	volume = {},
-	publisher = {North-Holland: Amsterdam},
+	publisher = {North-Holland},
+	address = {Amsterdam},
 	year = {1959},
 }
 @article {Odqvist1930,
@@ -481,28 +602,32 @@
 	author = {Oseen, Carl W.},
 	title = {Neuere {M}ethoden und {E}rgebnisse in der {H}ydrodynamik},
 	publisher = {Akademische Verlagsgesellschaft M B H},
+	address = {Leipzig},
 	year = {1927},
 	month = {},
 }
 @book {Phillips1933,
 	author = {Phillips, Henry B.},
 	title = {Vector Analysis},
-	publisher = {John Wiley: New York},
+	publisher = {John Wiley},
+	address = {New York},
 	year = {1933},
 	month = {},
 }
 @book {Post1997,
 	author = {Post, E. J.},
 	title = {Formal Structure of Electromagnetics: General Covariance and Electromagnetics},
-	publisher = {Dover Publications: New York},
+	publisher = {Dover Publications},
+	address = {New York},
 	year = {1997},
 	month = {},
-	note = {Reprint of 1962 edition, Interscience Publishers: New York}
+	note = {Reprint of 1962 edition, Interscience Publishers, New York}
 }
 @book {PrandtlTietjens1957,
 	author = {Prandtl, Ludwig and Tietjens, Oskar K. G.},
 	title = {Fundamentals of Hydro- and Aeromechanics},
-	publisher = {Dover Publications: New York},
+	publisher = {Dover Publications},
+	address = {New York},
 	year = {1957},
 	month = {},
 	note = {Reprint of 1934 edition}
@@ -519,21 +644,24 @@
 @book {PrudnikovBrychkovMarichev1986a,
 	author = {Prudnikov, Anatoli\u{\i} P. and Brychkov, Yuri\u{\i} A. and Marichev, Oleg I.},
 	title = {Integrals and Series. Volume 1: Elementary Functions},
-	publisher = {Gordon and Breach Science Publishers: New York},
+	publisher = {Gordon and Breach Science Publishers},
+	address = {New York},
 	year = {1986},
 	month = {},
 }
 @book {PrudnikovBrychkovMarichev1986b,
 	author = {Prudnikov, Anatoli\u{\i} P. and Brychkov, Yuri\u{\i} A. and Marichev, Oleg I.},
 	title = {Integrals and Series. Volume 2: Special Functions},
-	publisher = {Gordon and Breach Science Publishers: New York},
+	publisher = {Gordon and Breach Science Publishers},
+	address = {New York},
 	year = {1986},
 	month = {},
 }
 @book {PrudnikovBrychkovMarichev1990,
 	author = {Prudnikov, Anatoli\u{\i} P. and Brychkov, Yuri\u{\i} A. and Marichev, Oleg I.},
 	title = {Integrals and Series. Volume 3: More Special Functions},
-	publisher = {Gordon and Breach Science Publishers: New York},
+	publisher = {Gordon and Breach Science Publishers},
+	address = {New York},
 	year = {1990},
 	month = {},
 }
@@ -558,7 +686,8 @@
 @book {Schlichting1960,
 	author = {Schlichting, Hermann},
 	title = {Boundary Layer Theory},
-	publisher = {McGraw-Hill: New York},
+	publisher = {McGraw-Hill},
+	address = {New York},
 	year = {1960},
 	month = {},
 }
@@ -570,8 +699,28 @@
 	booktitle = {Fluid Dynamics I},
 	series = {Encyclopedia of Physics},
 	volume = {VIII/1},
-	publisher = {Springer-Verlag: Berlin, Heidelberg},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
 	year = {1959},
+	month = {},
+}
+@book {Serrin1986ed,
+	editor = {Serrin, James B.},
+	title = {New Perspectives in Thermodynamics},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1986},
+	month = {},
+}
+@incollection {Serrin1986a,
+	author = {Serrin, James B.},
+	title = {An outline of thermodynamic structure},
+	pages = {3--32},
+	editor = {Serrin, James B.},
+	booktitle = {New Perspectives in Thermodynamics},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1986},
 	month = {},
 }
 @article {ShuChwang2001,
@@ -585,10 +734,22 @@
 	pages = {051201},
 	issn = {},
 }
+@incollection {Silhavy1986a,
+	author = {{\u{S}}ilhav\'y, Miroslav},
+	title = {Foundations of continuum thermodynamics},
+	pages = {33--48},
+	editor = {Serrin, James B.},
+	booktitle = {New Perspectives in Thermodynamics},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1986},
+	month = {},
+}
 @book {Smith1994,
 	author = {Smith, Gerald F.},
 	title = {Constitutive Equations for Anisotropic and Isotropic Materials},
-	publisher = {North-Holland: New York},
+	publisher = {North-Holland},
+	address = {New York},
 	year = {1994},
 	month = {},
 }
@@ -619,7 +780,8 @@
 	booktitle = {Nonlinear Problems in Mathematical Physics and Related Topics {I}. In Honor of {P}rofessor {O}. {A}. {L}adyzhenskaya},
 	series = {},
 	volume = {},
-	publisher = {Kluwer Academic/Plenum Publishers: New York},
+	publisher = {Kluwer Academic/Plenum Publishers},
+	address = {New York},
 	year = {2002},
 }
 @article {Solonnikov2003a,
@@ -685,7 +847,8 @@
 @book {Truesdell1954,
 	author = {Truesdell, {III}, Clifford A.},
 	title = {The Kinematics of Vorticity},
-	publisher = {Indiana University Press: Bloomington, Indiana},
+	publisher = {Indiana University Press},
+	address = {Bloomington, Indiana},
 	year = {1954},
 	month = {},
 }
@@ -694,6 +857,7 @@
 	title = {A First Course in Rational Continuum Mechanics},
 	volume = {1},
 	publisher = {Academic Press},
+	address = {},
 	year = {1991},
 	month = {},
 }
@@ -703,14 +867,16 @@
 	pages = {},
 	series = {Encyclopedia of Physics},
 	volume = {III/3},
-	publisher = {Springer-Verlag: Berlin},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
 	year = {1965},
 }
 @book {TruesdellRajagopal2000,
 	author = {Truesdell, {III}, Clifford A. and Rajagopal, Kumbakonam R.},
 	title = {An {I}ntroduction to the {M}echanics of {F}luids},
 	volume = {},
-	publisher = {Birkh\"auser: Boston},
+	publisher = {Birkh\"auser},
+	address = {Boston},
 	year = {2000},
 	month = {},
 }
@@ -722,14 +888,16 @@
 	booktitle = {Principles of Classical Mechanics and Field Theory},
 	series = {Encyclopedia of Physics},
 	volume = {III/1},
-	publisher = {Springer-Verlag: Berlin},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
 	year = {1960},
 }
 @book {Wang1979a,
 	author = {Wang, Chao-Cheng},
 	title = {Mathematical Principles of Mechanics and Electromagnetism. Part A: Analytical and Continuum Mechanics},
 	volume = {},
-	publisher = {Plenum Press: New York},
+	publisher = {Plenum Press},
+	address = {New York},
 	year = {1979},
 	month = {},
 }
@@ -737,7 +905,17 @@
 	author = {Wang, Chao-Cheng},
 	title = {Mathematical Principles of Mechanics and Electromagnetism. Part B: Electromagnetism and Gravitation},
 	volume = {},
-	publisher = {Plenum Press: New York},
+	publisher = {Plenum Press},
+	address = {New York},
 	year = {1979},
+	month = {},
+}
+@book {Zimmer1990,
+	author = {Zimmer, Robert J.},
+	title = {Essential Results of Functional Analysis},
+	series = {Chicago Lectures in Mathematics},
+	publisher = {University of Chicago Press},
+	address = {Chicago},
+	year = {1990},
 	month = {},
 }
