--- a/eringen.bib
+++ b/eringen.bib
@@ -1,46 +1,42 @@
-@incollection {TBD4,
-        author = {TBD},
-        title = {TBD},
-        pages = {},
+@book {Eringen1971vol1,
         editor = {Eringen, A. Cemal},
-        booktitle = {Continuum Physics},
-        series = {},
-        volume = {IV: Polar and nonlocal field theories},
-        publisher = {Academic Press: New York},
-        year = {1976},
-}
-@incollection {TBD3,
-        author = {TBD},
-        title = {TBD},
+        title = {Continuum Physics},
         pages = {},
-        editor = {Eringen, A. Cemal},
-        booktitle = {Continuum Physics},
-        series = {},
-        volume = {III: Mixtures and {EM} field theories},
-        publisher = {Academic Press: New York},
-        year = {1976},
-}
-@incollection {TBD2,
-        author = {TBD},
-        title = {TBD},
-        pages = {},
-        editor = {Eringen, A. Cemal},
-        booktitle = {Continuum Physics},
-        series = {},
-        volume = {II: Continuum Mechanics of Single-Substance Bodies},
-        publisher = {Academic Press: New York},
-        year = {1975},
-}
-@incollection {TBD1,
-        author = {TBD},
-        title = {TBD},
-        pages = {},
-        editor = {Eringen, A. Cemal},
-        booktitle = {Continuum Physics},
         series = {},
         volume = {I: Mathematics},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1971},
+}
+@book {Eringen1975vol2,
+        editor = {Eringen, A. Cemal},
+        title = {Continuum Physics},
+        pages = {},
+        series = {},
+        volume = {II: Continuum Mechanics of Single-Substance Bodies},
+        publisher = {Academic Press},
+	address = {New York},
+        year = {1975},
+}
+@book {Eringen1976vol3,
+        editor = {Eringen, A. Cemal},
+        title = {Continuum Physics},
+        pages = {},
+        series = {},
+        volume = {III: Mixtures and {EM} field theories},
+        publisher = {Academic Press},
+	address = {New York},
+        year = {1976},
+}
+@book {Eringen1976vol4,
+        editor = {Eringen, A. Cemal},
+        title = {Continuum Physics},
+        pages = {},
+        series = {},
+        volume = {IV: Polar and nonlocal field theories},
+        publisher = {Academic Press},
+	address = {New York},
+        year = {1976},
 }
 
 %%%%%
@@ -55,7 +51,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {1: Mathematics},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1971},
 }
 @incollection {Smith1971a,
@@ -66,7 +63,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {1: Mathematics},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1971},
 }
 @incollection {Spencer1971a,
@@ -77,7 +75,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {1: Mathematics},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1971},
 }
 @incollection {Sneddon1971a,
@@ -88,7 +87,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {1: Mathematics},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1971},
 }
 @incollection {Woods1971a,
@@ -99,7 +99,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {1: Mathematics},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1971},
 }
 @incollection {Samuels1971a,
@@ -110,7 +111,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {1: Mathematics},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1971},
 }
 
@@ -126,7 +128,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {II: Continuum Mechanics of Single-Substance Bodies},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1975},
 }
 @incollection {Eringen1975b,
@@ -137,7 +140,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {II: Continuum Mechanics of Single-Substance Bodies},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1975},
 }
 @incollection {Eringen1975c,
@@ -148,7 +152,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {II: Continuum Mechanics of Single-Substance Bodies},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1975},
 }
 @incollection {Eringen1975d,
@@ -159,7 +164,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {II: Continuum Mechanics of Single-Substance Bodies},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1975},
 }
 @incollection {Suhubi1975a,
@@ -170,7 +176,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {II: Continuum Mechanics of Single-Substance Bodies},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1975},
 }
 @incollection {Chang1975a,
@@ -181,7 +188,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {II: Continuum Mechanics of Single-Substance Bodies},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1975},
 }
 @incollection {Dill1975a,
@@ -192,7 +200,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {II: Continuum Mechanics of Single-Substance Bodies},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1975},
 }
 @incollection {Kafadar1975a,
@@ -203,7 +212,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {II: Continuum Mechanics of Single-Substance Bodies},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1975},
 }
 @incollection {McCarthy1975a,
@@ -214,7 +224,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {II: Continuum Mechanics of Single-Substance Bodies},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1975},
 }
 @incollection {Erdogan1975a,
@@ -225,7 +236,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {II: Continuum Mechanics of Single-Substance Bodies},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1975},
 }
 
@@ -241,7 +253,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {III: Mixtures and {EM} field theories},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1976},
 }
 @incollection {Grot1976a,
@@ -252,7 +265,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {III: Mixtures and {EM} field theories},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1976},
 }
 @incollection {Maugin1976a,
@@ -263,7 +277,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {III: Mixtures and {EM} field theories},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1976},
 }
 
@@ -280,7 +295,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {IV: Polar and nonlocal field theories},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1976},
 }
 @incollection {Edelen1976a,
@@ -291,7 +307,8 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {IV: Polar and nonlocal field theories},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1976},
 }
 @incollection {Eringen1976a,
@@ -302,6 +319,7 @@
         booktitle = {Continuum Physics},
         series = {},
         volume = {IV: Polar and nonlocal field theories},
-        publisher = {Academic Press: New York},
+        publisher = {Academic Press},
+	address = {New York},
         year = {1976},
 }
