--- a/biblio.bib
+++ b/biblio.bib
@@ -1,24 +1,8 @@
-@article {article-tag-to-change,
-	author = {},
-	title = {},
-	journal = {},
-	year = {},
-	volume = {},
-	number = {},
-	pages = {},
-}
-@book {book-tag-to-change,
-	author = {},
-	title = {},
-	publisher = {},
-	year = {},
-	month = {},
-}
 @book {AbrahamMarsdenRatiu1988,
 	author = {Abraham, Ralph and Marsden, Jerrold E. and Ratiu, Tudor},
 	title = {Manifolds, Tensor Analysis, and Applications},
 	series = {Applied Mathematical Sciences},
-	number = {75},
+	volume = {75},
 	edition = {second},
 	publisher = {Springer},
 	address = {New York},
@@ -59,6 +43,17 @@
 	number = {},
 	pages = {148--149},
 	annot = {Date appears to be 1951 for Zbl rather than 1964},
+}
+@book {ButzerBerens1967,
+	author = {Butzer, Paul L. and Berens, Hubert},
+	title = {Semi-Groups of Operators and Approximation},
+	series = {Die {G}rundlehren der mathematischen {W}issenschaften}, 
+	volume = {145},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1967},
+	month = {},
+	edition = {},
 }
 @book {ChoquetBruhatDewittMoretteDillardBleick,
 	author = {Choquet-Bruhat, Yvonne and DeWitt-Morette, C\'ecile and Dillard-Bleick, Margaret},
@@ -168,6 +163,37 @@
 	year = {1990},
 	month = {},
 }
+@book {Evans1990,
+	author = {Evans, Lawrence C.},
+	title = {Weak Convergence Methods for Nonlinear Partial Differential Equations},
+	series = {Conference Board of the Mathematical Sciences Regional Conference Series in Mathematics},
+	number = {74},
+	publisher = {American Mathematical Society},
+	address = {Providence, Rhode Island},
+	year = {1990},
+	month = {},
+}
+@book {Evans2010,
+	author = {Evans, Lawrence C.},
+	title = {Partial Differential Equations},
+	series = {Graduate Studies in Mathematics},
+	volume = {19},
+	edition = {second},
+	publisher = {American Mathematical Society},
+	address = {Providence, Rhode Island},
+	year = {2010},
+	month = {},
+}
+@book {FerrareseBini2008,
+	author = {Ferrarese, Giorigio and Bini, Donato},
+	title = {Introduction to Relativistic Continuum Mechanics},
+	publisher = {Springer},
+	address = {Berlin Heidelberg},
+	series = {Lecture Notes in Physics},
+	volume = {727},
+	year = {2008},
+	month = {},
+}
 @book {Ferrers1871,
 	editor = {Ferrers, Norman M.},
 	title = {Mathematical Papers of the Late George Green},
@@ -177,6 +203,15 @@
 	year = {1871},
 	month = {},
 	note = {Reprint 1970, Chelsea Publications, Bronx, New York}
+}
+@book {Frankel2012,
+	author = {Frankel, Theodore},
+	title = {The Geometry of Physics: an Introduction},
+	edition = {third},
+	publisher = {Cambridge University Press},
+	address = {},
+	year = {2012},
+	month = {},
 }
 @book {Friedman1964,
 	author = {Friedman, Avner},
@@ -225,8 +260,8 @@
 @book {GilbargTrudinger1983,
 	author = {Gilbarg, David and Trudinger, Neil S.},
 	title = {Elliptic Partial Differential Equations of Second Order},
-	series = {Grundlehren der mathematischen {W}issenschaften},
-	number = {224},
+	series = {Die {G}rundlehren der mathematischen {W}issenschaften},
+	volume = {224},
 	publisher = {Springer-Verlag},
 	address = {New York},
 	edition = {second},
@@ -278,6 +313,16 @@
 	number = {},
 	pages = {489--505},
 }
+@book {Gurtin1981,
+	author = {Gurtin, Morton E.},
+	title = {An Introduction to Continuum Mechanics},
+	series = {Mathematics in Science and Engineering},
+	volume = {158},
+	publisher = {Academic Press},
+	address = {New York},
+	year = {1981},
+	month = {},
+}
 @book {Hellwig1960,
 	author = {Hellwig, G\"unter},
 	title = {Partielle Differentialgleichungen},
@@ -318,7 +363,7 @@
 	publisher = {Springer-Verlag},
 	address = {Berlin},
 	series = {Lecture Notes in Physics},
-	number = {710},
+	volume = {710},
 	year = {2010},
 	month = {},
 }
@@ -347,7 +392,7 @@
 	publisher = {Springer-Verlag},
 	address = {New York},
 	series = {Applied Mathematical Sciences},
-	number = {1},
+	volume = {1},
 	edition = {fourth},
 	year = {1982},
 	month = {},
@@ -395,6 +440,14 @@
 	year = {1990},
 	month = {},
 }
+@book {KoshlyakovSmirnovGliner1964,
+	author = {Koshlyakov, N. S. and Smirnov, M. M. and Gliner, E. B.},
+	title = {Differential Equations of Mathematical Physics},
+	publisher = {North-Holland Publishing Company},
+	address = {Amsterdam},
+	year = {1964},
+	month = {},
+}
 @book {Ladyzhenskaya1963,
 	author = {Ladyzhenskaya, Olga A.},
 	title = {The Mathematical Theory of Viscous Incompressible Flow},
@@ -408,6 +461,15 @@
 	publisher = {Cambridge University Press},
 	address = {},
 	year = {1895},
+}
+@book {Lighthill1964,
+	author = {Lighthill, M. James},
+	title = {Fourier Analysis and Generalised Functions},
+	publisher = {Cambridge University Press},
+	volume = {},
+	address = {},
+	year = {1964},
+	month = {},
 }
 @book {Liu2002,
 	author = {Liu, I-{S}hih},
@@ -433,6 +495,15 @@
 	edition = {third},
 	year = {1966},
 }
+@book {Marchand1962,
+	author = {Marchand, Jean-Paul},
+	title = {Distributions, an Outline},
+	publisher = {Interscience Publishers},
+	volume = {},
+	address = {New York},
+	year = {1962},
+	month = {},
+}
 @book {Maugin2013,
 	author = {Maugin, G\'erard A.},
 	title = {Continuum Mechanics Through the Twentieth Century},
@@ -447,6 +518,13 @@
 	publisher = {Dover Publications},
 	address = {New York},
 	year = {1982},
+}
+@book {Mikhailov1978,
+	author = {Mikhailov, V. P.},
+	title = {Partial Differential Equations},
+	publisher = {Mir Publishers},
+	address = {Moscow},
+	year = {1978},
 }
 @book {Mikhlin1965,
 	author = {Mikhlin, Solomon G.},
@@ -536,6 +614,26 @@
 	      	and Schneider, Barry I. and Boisvert, Ronald F. and Clark, Charles W.
 	     	and Miller, Bruce R. and Saunders, Bonita V.
 		and Cohl, Howard S. and Mc{C}lain, Marjorie A., editors}
+}
+@book {Niven1890a,
+	editor = {Niven, W. D.},
+	title = {The Scientific Papers of James Clerk Maxwell},
+	publisher = {Cambridge University Press},
+	volume = {1},
+	address = {},
+	year = {1890},
+	note = {Reprint 2003, Dover Publications, New York},
+	month = {},
+}
+@book {Niven1890b,
+	editor = {Niven, W. D.},
+	title = {The Scientific Papers of James Clerk Maxwell},
+	publisher = {Cambridge University Press},
+	volume = {2},
+	address = {},
+	year = {1890},
+	note = {Reprint 2003, Dover Publications, New York},
+	month = {},
 }
 @article {Noll1958,
 	author = {Noll, Walter},
@@ -691,6 +789,24 @@
 	year = {1960},
 	month = {},
 }
+@book {Schwartz1950,
+	author = {Schwartz, Laurent},
+	title = {Th\'eorie des Distributions},
+	volume = {1},
+	publisher = {Hermann \& Cie},
+	address = {Paris},
+	year = {1950},
+	month = {},
+}
+@book {Schwartz1951,
+	author = {Schwartz, Laurent},
+	title = {Th\'eorie des Distributions},
+	volume = {2},
+	publisher = {Hermann \& Cie},
+	address = {Paris},
+	year = {1951},
+	month = {},
+}
 @incollection {Serrin1959,
 	author = {Serrin, James B.},
 	title = {Mathematical principles of classical fluid mechanics},
@@ -844,6 +960,16 @@
 	number = {1},
 	pages = {77--98},
 }
+@book {Triebel1983,
+	author = {Triebel, Hans},
+	title = {Theory of Function Spaces},
+	series = {Monographs in Mathematics},
+	volume = {78},
+	publisher = {Birkh\"auser Verlag},
+	address = {Boston},
+	year = {1983},
+	month = {},
+}
 @book {Truesdell1954,
 	author = {Truesdell, {III}, Clifford A.},
 	title = {The Kinematics of Vorticity},
@@ -851,6 +977,15 @@
 	address = {Bloomington, Indiana},
 	year = {1954},
 	month = {},
+}
+@book {Truesdell1966,
+	author = {Truesdell, {III}, Clifford A.},
+	title = {The Elements of Continuum Mechanics},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1966},
+	month = {},
+	note = {Corrected second printing 1985},
 }
 @book {Truesdell1991,
 	author = {Truesdell, {III}, Clifford A.},
@@ -891,6 +1026,16 @@
 	publisher = {Springer-Verlag},
 	address = {Berlin},
 	year = {1960},
+}
+@book {Wahl1985,
+	author = {von Wahl, Wolf},
+	title = {The Equations of {N}avier-{S}tokes and Abstract Parabolic Equations},
+	series = {Aspects of Mathematics},
+	volume = {E8},
+	publisher = {Friedr. Vieweg \& Son Verlagsgesellschaft mbH},
+	address = {Braunschweig},
+	year = {1985},
+	month = {},
 }
 @book {Wang1979a,
 	author = {Wang, Chao-Cheng},
