--- a/biblio.bib
+++ b/biblio.bib
@@ -341,6 +341,49 @@
 	number = {},
 	pages = {25--55},
 }
+@book {Hormander1983a,
+	author = {H{\"o}rmander, Lars},
+	title = {The Analysis of Linear Partial Differential Operators I. {D}istribution Theory and {F}ourier Analysis},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	series = {Grundlehren der mathematischen {W}issenshaften},
+	volume = {256},
+	year = {1983},
+	month = {},
+}
+@book {Hormander1983b,
+	author = {H{\"o}rmander, Lars},
+	title = {The Analysis of Linear Partial Differential Operators II. {D}ifferential Operators with Constant Coefficients},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	series = {Grundlehren der mathematischen {W}issenshaften},
+	volume = {257},
+	year = {1983},
+	month = {},
+	note = {Second revised printing 1990},
+}
+@book {Hormander1985a,
+	author = {H{\"o}rmander, Lars},
+	title = {The Analysis of Linear Partial Differential Operators III. {P}seudo-Differential Operators},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	series = {Grundlehren der mathematischen {W}issenshaften},
+	volume = {274},
+	year = {1985},
+	month = {},
+	note = {},
+}
+@book {Hormander1985b,
+	author = {H{\"o}rmander, Lars},
+	title = {The Analysis of Linear Partial Differential Operators IV. {F}ourier Integral Operators},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	series = {Grundlehren der mathematischen {W}issenshaften},
+	volume = {275},
+	year = {1985},
+	month = {},
+	note = {},
+}
 @book {Hunt1965,
 	author = {Hunt, J. N.},
 	title = {Incompressible Fluid Dynamics},
